--- a/rush.yaml
+++ b/rush.yaml
@@ -84067,6 +84067,238 @@ sets:
     - Secret Rare
 yugipedia_page_id: 905613
 ---
+konami_id: 18400
+name:
+  en: Transamu Rainac - War To Zen!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライナック－ウォー・トゥ・ゼン！
+  ja_romaji: Toranzamu Rainakku - Wō Tu Zen!
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have another face-up LIGHT Attribute monster with 1400 or less ATK on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドにこのカード以外の表側表示モンスター（光属性／攻撃力１４００以下）がいる場合に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 face-up monster with 1500 or less ATK on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドの表側表示モンスター（攻撃力１５００以下）１体を選んで破壊する。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 1400
+def: 200
+series:
+- Transamu
+- Signature move
+images:
+- index: 1
+  image: TransamuRainacWarToZen-RDDD02-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DD02-JP001
+    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 904875
+---
+konami_id: 18401
+name:
+  en: Jointech Leo
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・レオ
+  ja_romaji: Jointekku Reo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードを召喚したターンに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 Spell/Trap Card in your opponent's Graveyard. Your opponent Sets that card on their field. Then, you can add 1 Level 7 or higher EARTH Attribute Machine Type monster from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分は相手の墓地の魔法・罠カード１枚を選ぶ。相手はそのカードを自身のフィールドにセットする。その後、自分は自分の墓地のモンスター（レベル７以上／地属性／機械族）１体を選んで手札に加える事ができる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 4
+atk: 1400
+def: 0
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechLeo-RDDD02-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DD02-JP002
+    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 904874
+---
+konami_id: 18402
+name:
+  en: Lightwave Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ライトウェーブ・ドラゴン
+  ja_romaji: Raitowēbu Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    デッキの上からカード２枚を墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドの表側表示モンスターを３体まで選び、その攻撃力をこのメインフェイズの間１５００ダウンする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 4
+atk: 1300
+def: 500
+series:
+- High Tech Dragon
+images:
+- index: 1
+  image: LightwaveDragon-RDDD02-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DD02-JP003
+    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 904873
+---
+konami_id: 18403
+name:
+  en: Magic Cylinder
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手モンスターの攻撃宣言時に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Negate the attack, and inflict damage to your opponent equal to [that monster's ATK].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    その攻撃を無効にし、［そのモンスターの攻撃力］だけ相手にダメージを与える。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+legend: true
+images:
+- index: 1
+  image: MagicCylinder-RDDD02-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/DD02-JP005
+    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
+    rarities:
+    - Secret Rare
+yugipedia_page_id: 904870
+---
 konami_id: 18463
 name:
   en: Cyber Search Dragon
@@ -84139,231 +84371,7 @@ sets:
     - Normal Parallel Rare
 yugipedia_page_id: 909123
 ---
-konami_id:
-name:
-  en: Magic Cylinder
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    When an opponent's monster declares an attack.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Negate the attack, and inflict damage to your opponent equal to [that monster's ATK].
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Trap
-property: Normal
-legend: true
-images:
-- index: 1
-  image: MagicCylinder-RDDD02-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/DD02-JP005
-    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
-    rarities:
-    - Secret Rare
-yugipedia_page_id: 904870
----
-konami_id:
-name:
-  en: Lightwave Dragon
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ライトウェーブ・ドラゴン
-  ja_romaji: Raitowēbu Doragon
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send the top 2 cards of your Deck to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Effect
-attribute: LIGHT
-level: 4
-atk: 1300
-def: 500
-series:
-- High Tech Dragon
-images:
-- index: 1
-  image: LightwaveDragon-RDDD02-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/DD02-JP003
-    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
-    rarities:
-    - Secret Rare
-yugipedia_page_id: 904873
----
-konami_id:
-name:
-  en: Jointech Leo
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ジョインテック・レオ
-  ja_romaji: Jointekku Reo
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    During the turn you Normal Summoned this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Choose 1 Spell/Trap Card in your opponent's Graveyard. Your opponent Sets that card on their field. Then, you can add 1 Level 7 or higher EARTH Attribute Machine Type monster from your Graveyard to your hand.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Machine / Effect
-attribute: EARTH
-level: 4
-atk: 1400
-def: 0
-series:
-- Jointech
-images:
-- index: 1
-  image: JointechLeo-RDDD02-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/DD02-JP002
-    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
-    rarities:
-    - Secret Rare
-yugipedia_page_id: 904874
----
-konami_id:
-name:
-  en: Transamu Rainac - War To Zen!
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: トランザム・ライナック－ウォー・トゥ・ゼン！
-  ja_romaji: Toranzamu Rainakku - Wō Tu Zen!
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    You have another face-up LIGHT Attribute monster with 1400 or less ATK on your field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Destroy 1 face-up monster with 1500 or less ATK on your opponent's field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: LIGHT
-level: 4
-atk: 1400
-def: 200
-series:
-- Transamu
-- Signature move
-images:
-- index: 1
-  image: TransamuRainacWarToZen-RDDD02-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/DD02-JP001
-    set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
-    rarities:
-    - Secret Rare
-yugipedia_page_id: 904875
----
-konami_id:
+konami_id: 18577
 name:
   en: Garnecia Elefantis
   de:
@@ -84407,7 +84415,64 @@ sets:
     - Normal Parallel Rare
 yugipedia_page_id: 913099
 ---
-konami_id:
+konami_id: 18578
+name:
+  en: Wave Crest Madoor
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>波<rt>は</rt></ruby><ruby>頭<rt>とう</rt></ruby>のマドール
+  ja_romaji: Hatō no Madōru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Spellcaster Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    手札のモンスター（魔法使い族）１体を墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: WATER
+level: 5
+atk: 1000
+def: 1200
+images:
+- index: 1
+  image: WaveCrestMadoor-RD23PR-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/23PR-JP002
+    set_name: Rush Duel Promotion Pack 2023
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 921197
+---
+konami_id: 18579
 name:
   en: Nikotamabot
   de:
@@ -84429,7 +84494,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -84441,7 +84507,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手は１枚ドローし、お互いに確認する。そのカードがモンスターだった場合、さらにこのカードの攻撃力はターン終了時まで、［確認したモンスターの攻撃力］だけアップする。
   ko:
   zh-TW:
   zh-CN:
@@ -84459,7 +84526,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「タマボット」＋「タマボット」
   ko:
   zh-TW:
   zh-CN:
@@ -84473,6 +84541,113 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 913101
+---
+konami_id: 18580
+name:
+  en: Silent Doom
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    なし
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Normal Monster from your Graveyard to your field in face-up Defense Position. While the monster Special Summoned by this effect is face-up, it cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地の通常モンスター１体を選び、自分フィールドに表側守備表示で特殊召喚する。この効果で特殊召喚したモンスターは表側表示の間、攻撃できない。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: SilentDoom-RD23PR-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/23PR-JP004
+    set_name: Rush Duel Promotion Pack 2023
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 921195
+---
+konami_id: 18581
+name:
+  en: Widespread Ruin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手モンスターの攻撃宣言時に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Attack Position monster with the highest ATK on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドの攻撃表示モンスターの内、攻撃力が一番高いモンスター１体を選んで破壊する。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+legend: true
+images:
+- index: 1
+  image: WidespreadRuin-RD23PR-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/23PR-JP005
+    set_name: Rush Duel Promotion Pack 2023
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 921196
 ---
 konami_id:
 name:
