--- a/data/cards/38342335.yaml
+++ b/data/cards/38342335.yaml
@@ -155,6 +155,15 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RC04-JP044
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: FLOD-KR047
     set_name: Flames of Destruction
