--- a/data/cards/95440946.yaml
+++ b/data/cards/95440946.yaml
@@ -119,6 +119,15 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RC04-JP020
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DBSS-KR027
     set_name: 'Deck Build Pack: Secret Slayers'
