--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1942,6 +1942,18 @@
   ko_rr: Bulttotseonggisa
   zh-TW:
   zh-CN:
+- en: Firewall
+  de: Firewall
+  es: Cortafuego
+  fr: Pare-Feu
+  it: Firewall
+  pt: Firewall
+  ja: ファイアウォール
+  ja_romaji: Faiawōru
+  ko: 파이어월
+  ko_rr: Paieowol
+  zh-TW:
+  zh-CN:
 - en: Celtic Guard
   de: Keltisch
   es: Celta
