--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -62,6 +62,8 @@ images:
   illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork.png
 - index: 2
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
+- index: 3
+  image: MultistrikeDragonDragias-RDKP12-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -96,6 +98,10 @@ sets:
     set_name: Saikyo Starter Deck
     rarities:
     - Common
+  - set_number: RD/KP12-JP066
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
