--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1942,6 +1942,18 @@ Infernoble Knight:
   ko_rr: Bulttotseonggisa
   zh-TW:
   zh-CN:
+Firewall:
+  de: Firewall
+  es: Cortafuego
+  fr: Pare-Feu
+  it: Firewall
+  pt: Firewall
+  ja: ファイアウォール
+  ja_romaji: Faiawōru
+  ko: 파이어월
+  ko_rr: Paieowol
+  zh-TW:
+  zh-CN:
 Celtic Guard:
   de: Keltisch
   es: Celta
