--- a/rush.yaml
+++ b/rush.yaml
@@ -1086,6 +1086,8 @@ images:
   illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork.png
 - index: 2
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
+- index: 3
+  image: MultistrikeDragonDragias-RDKP12-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -1120,6 +1122,10 @@ sets:
     set_name: Saikyo Starter Deck
     rarities:
     - Common
+  - set_number: RD/KP12-JP066
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
@@ -84909,3 +84915,269 @@ sets:
     - Ultra Rare
     - Rush Rare
 yugipedia_page_id: 920591
+---
+konami_id:
+name:
+  en: Cat Claw Girl
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キャットクロー・ガール
+  ja_romaji: Kyattokurō Gāru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 card from your hand on the bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Beast Type monster with 200 DEF from your Graveyard face-up to your field. Then, if you Special Summoned a Normal Monster by this effect, you can Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: DARK
+level: 7
+atk: 2200
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: CatClawGirl-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP016
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 921244
+---
+konami_id:
+name:
+  en: The☆Dragiastar
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ザ☆ドラギアスター
+  ja_romaji: Za☆Doragiasutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 2 or more Normal Monsters with the same name in your Graveyard, send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Multi-Choice
+effect:
+  en: |-
+    ● 2 Attack Position monsters with the same name on your field can attack twice this turn.
+    ● Special Summon 2 Normal Monsters with the same name from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: High Dragon / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 3300
+def: 2500
+materials:
+  en: |-
+    "The☆Dragias" + "The☆Dragias"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- The☆
+images:
+- index: 1
+  image: TheDragiastar-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP035
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Ultra Rare
+    - Rush Rare
+yugipedia_page_id: 921247
+---
+konami_id:
+name:
+  en: Gilford the Lightning
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 3 monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card by Tributing 3 monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all monsters on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: LIGHT
+level: 8
+atk: 2800
+def: 1400
+legend: true
+images:
+- index: 1
+  image: GilfordtheLightning-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP000
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Secret Rare
+    - Rush Rare
+yugipedia_page_id: 921253
+---
+konami_id:
+name:
+  en: Gilford the Rising
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギルフォード・ザ・ライジング
+  ja_romaji: Girufōdo Za Raijingu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    Cannot be Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, shuffle 2 Warrior Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card can make up to 3 attacks on monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: FIRE
+level: 8
+atk: 2500
+def: 2200
+images:
+- index: 1
+  image: GilfordtheRising-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP028
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 921254
