--- a/data/cards/77754944.yaml
+++ b/data/cards/77754944.yaml
@@ -8,7 +8,7 @@ name:
   it: Rovine Diffuse
   pt: Ruína Generalizada
   ja: <ruby>万<rt>ばん</rt></ruby><ruby>能<rt>のう</rt></ruby><ruby>地<rt>じ</rt></ruby><ruby>雷<rt>らい</rt></ruby>グレイモヤ
-  ja_romaji: Bannō Jirai Gureimoya
+  ja_romaji: Bannōjirai Gureimoya
   ko: 만능지뢰 회색안개
   ko_rr: Hanneungjiroe Hoesaek-an-gae
   zh-TW: 萬能地雷闊刀式
