--- a/data/cards/kdb15467.yaml
+++ b/data/cards/kdb15467.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>液<rt>えき</rt></ruby><ruby>状<rt>じょう</rt></ruby><ruby>巨<rt>きょ</rt></ruby><ruby>人<rt>じん</rt></ruby>ダイダラタント
-  ja_romaji: Ekijō Kyojin Daidaratanto
+  ja_romaji: Ekijōkyojin Daidaratanto
   ko:
   ko_rr:
   zh-TW:
