--- a/data/cards/yugipedia921233.yaml
+++ b/data/cards/yugipedia921233.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can Special Summon 1 "tellarknight" or "Constellar" monster from your hand or GY. You can target 1 "tellarknight" or "Constellar" Xyz Monster you control; Special Summon from your Extra Deck, 1 "tellarknight" or "Constellar" Xyz Monster with a different Rank from that monster you control, by using it as material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can only use this effect of "Tellarknight Constellar" once per turn.
+    When this card is activated: You can Special Summon 1 "tellarknight" or "Constellar" monster from your hand or GY. You can target 1 "tellarknight" or "Constellar" Xyz Monster you control; Special Summon from your Extra Deck, 1 "tellarknight" or "Constellar" Xyz Monster with a different Rank from that monster you control, by using it as material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can only use this effect of "Tellarknight Constellar" once per turn. You can only activate 1 "Tellarknight Constellar" per turn.
   de:
   es:
   fr:
