--- a/rush.yaml
+++ b/rush.yaml
@@ -85181,3 +85181,448 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 921254
+---
+konami_id:
+name:
+  en: Double Ray Dragons
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダブルレイ・ドラゴンズ
+  ja_romaji: Dabururei Doragonzu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are Dragon and/or High Dragon Type monsters, pay 500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Multi-Choice
+effect:
+  en: |-
+    ● 1 face-up Normal Monster on your field can attack twice this turn.
+    ● Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: High Dragon / Fusion / Effect
+attribute: WATER
+level: 9
+atk: 2800
+def: 1700
+materials:
+  en: |-
+    "Ray Dragon" + "Ray Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: DoubleRayDragons-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP034
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921264
+---
+konami_id:
+name:
+  en: Star Cat Straynya
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スターキャット・ストライニャー
+  ja_romaji: Sutākyatto Sutorainyā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 other card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses 2200 ATK/DEF until the end of this turn. Then, if you sent a Normal Monster with 200 original DEF to the Graveyard to meet the requirement, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast-Warrior / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 2900
+def: 200
+materials:
+  en: |-
+    "Cat Claw Girl" + "Silver-Eyes Star Cat"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Cat
+images:
+- index: 1
+  image: StarCatStraynya-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP036
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921265
+---
+konami_id:
+name:
+  en: Star Cat Destronya
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スターキャット・デストロイニャー
+  ja_romaji: Sutākyatto Desutoroinyā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 monsters with 200 DEF from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 2 monsters with 200 DEF and the same Level from your Graveyard face-up to your field. If you Special Summoned Normal Monsters by this effect, those Normal Monsters gain 2200 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast-Warrior / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 2900
+def: 200
+materials:
+  en: |-
+    "Cat Claw Girl" + "Golden-Eyes Star Cat"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Cat
+images:
+- index: 1
+  image: StarCatDestronya-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP037
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 921266
+---
+konami_id:
+name:
+  en: Silver-Eyes Star Cat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 銀眼の星猫
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A star cat with eyes of silver. They're filled with wonder.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Normal
+attribute: DARK
+level: 4
+atk: 1400
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: SilverEyesStarCat-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP004
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921267
+---
+konami_id:
+name:
+  en: Golden-Eyes Star Cat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>金眼の星猫<rt>ゴールデンアイズ・スターキャット</rt></ruby>
+  ja_romaji: Gōruden'aizu Sutākyatto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A star cat with eyes of gold. They're filled with charm.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Normal
+attribute: LIGHT
+level: 4
+atk: 1500
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: GoldenEyesStarCat-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP005
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921268
+---
+konami_id:
+name:
+  en: The☆Copy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ザ☆コピー
+  ja_romaji: Za☆Kopī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Your opponent has a face-up Level 7 or higher monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Normal Monster with the same name as a face-up monster on your field, from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- The☆
+images:
+- index: 1
+  image: TheCopy-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP046
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921269
+---
+konami_id:
+name:
+  en: Vice Slasher
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: バイスラッシャー
+  ja_romaji: Baisurasshā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 2 or more face-up Dragon Type Normal Monsters with the same name on your field, equip this card to 1 of them.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains ATK equal to [its original ATK]. The equipped monster cannot attack directly.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: ViceSlasher-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP048
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 921270
+---
+konami_id:
+name:
+  en: Ray Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レイ・ドラゴン
+  ja_romaji: Rei Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A dragon that lives in cold territories. It moves at high speeds through snowy paths.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: WATER
+level: 4
+atk: 1500
+def: 0
+images:
+- index: 1
+  image: RayDragon-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP002
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921271
