--- a/data/cards/37972500.yaml
+++ b/data/cards/37972500.yaml
@@ -54,6 +54,7 @@ atk: 1900
 materials: 2 Pendulum Monsters
 series:
 - Solfachord
+- GranSolfachord
 images:
 - index: 1
   image: GranSolfachordMusecia-DAMA-EN-UR-1E.png
