--- a/data/rush/yugipedia921267.yaml
+++ b/data/rush/yugipedia921267.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 銀眼の星猫
-  ja_romaji:
+  ja: <ruby>銀眼の星猫<rt>シルバーアイズ・スターキャット</rt></ruby>
+  ja_romaji: Shirubāaizu Sutā Kyatto
   ko:
   ko_rr:
   zh-TW:
