--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4618,6 +4618,18 @@ Gottoms:
   ko_rr:
   zh-TW:
   zh-CN:
+GranSolfachord:
+  de: GranSolfakkord
+  es: Gransolfacorde
+  fr: GranSolfaccord
+  it: GranSolfaccordo
+  pt: MaiorSolfacorde
+  ja: グランドレミコード
+  ja_romaji: Gurandoremikōdo
+  ko: 그랜도레미코드
+  ko_rr: Geuraendoremikodeu
+  zh-TW:
+  zh-CN:
 Impcantation:
   de: Mantrawichtel
   es: Diablihechizo
