--- a/data/cards/55144522.yaml
+++ b/data/cards/55144522.yaml
@@ -392,6 +392,7 @@ sets:
     set_name: Pot Collection
     rarities:
     - Ultra Parallel Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K119
     set_name: Legend of Blue Eyes White Dragon
