--- a/rush.yaml
+++ b/rush.yaml
@@ -85626,3 +85626,109 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 921271
+---
+konami_id:
+name:
+  en: Dragon Double-Doom
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>竜<rt>りゅう</rt></ruby>の<ruby>二<rt>に</rt></ruby><ruby>呪<rt>じゅ</rt></ruby><ruby>葬<rt>そう</rt></ruby>
+  ja_romaji: Ryū no Nijusō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack while you have a face-up High Dragon or Dragon Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    You choose which of your monsters becomes the attack target for your opponent's attack. Then, if you have 2 or more face-up monsters with the same name on your field, you can destroy 1 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: DragonDoubleDoom-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP060
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921308
+---
+konami_id:
+name:
+  en: Double-Doom Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>二<rt>に</rt></ruby><ruby>呪<rt>じゅ</rt></ruby><ruby>葬<rt>そう</rt></ruby>の<ruby>竜<rt>りゅう</rt></ruby>
+  ja_romaji: Nijusō no Ryū
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Gain 200 LP. Then, you can Set 1 "Dragon Double-Doom" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 2
+atk: 200
+def: 200
+images:
+- index: 1
+  image: DoubleDoomDragon-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP011
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 921309
