--- a/data/cards/69852487.yaml
+++ b/data/cards/69852487.yaml
@@ -12,7 +12,7 @@ name:
   ko: 희망황 아스트랄 호프
   ko_rr: Huimanghwang Aseuteural Hopeu
   zh-TW:
-  zh-CN: 希望皇 星光霍普
+  zh-CN: 希望皇阿斯特拉尔・霍普
 text:
   en: |-
     If an Xyz Monster(s) is on the field: You can Special Summon this card from your hand. You can send 1 other card from your hand or field to the GY; add 1 "Xyz", "Onomat", "Zexal", or "Number" Spell/Trap, from your Deck to your hand. You can only use each effect of "Astraltopia" once per turn.
@@ -32,11 +32,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 필드에 엑시즈 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드 이외의 자신의 패 / 필드의 카드 1장을 묘지로 보내고 발동할 수 있다. 덱에서 이하의 카드 중 어느 1장을 패에 넣는다. ●"엑시즈" 마법 / 함정 카드 ●"오노마토" 마법 / 함정 카드 ●"제알" 마법 / 함정 카드 ●"넘버즈" 마법 / 함정 카드
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：场上有多维怪兽存在的场合可以发动。将这张卡从手牌特殊召唤。②：可以将这张卡以外的自己的手牌或场上的1张卡送入墓地发动。从卡组将以下的卡之中的任意1张加入手牌。
-    ●「エクシーズ／多维」魔法陷阱卡
-    ●「オノマト／拟声」魔法陷阱卡
-    ●「ゼアル／异热同心」魔法陷阱卡
-    ●「ナンバーズ／编号」魔法陷阱卡
+    此卡名的①②效果1回合仅可各使用1次。①：场上有超量怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。②：将自己手牌・场上此卡以外的1张卡送至墓地可以发动。从牌组将以下卡中的任意1张加入手牌。
+    ●"超量"魔法・陷阱卡●"拟声"魔法・陷阱卡●"ZEXAL"魔法・陷阱卡●"号数"魔法・陷阱卡
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
@@ -81,6 +78,11 @@ sets:
     - Normal Parallel Rare
   ko:
   - set_number: SD42-KR001
+    set_name: 'Structure Deck: Overlay Universe'
+    rarities:
+    - Normal Parallel Rare
+  zh-CN:
+  - set_number: SD42-SC001
     set_name: 'Structure Deck: Overlay Universe'
     rarities:
     - Normal Parallel Rare
