--- a/data/cards/24094258.yaml
+++ b/data/cards/24094258.yaml
@@ -12,7 +12,7 @@ name:
   ko: 헤비메탈포제 엘렉트럼
   ko_rr:
   zh-TW:
-  zh-CN: 刚炼装勇士·银金公主
+  zh-CN: 强炼装・银金
 text:
   en: |-
     2 Pendulum Monsters
@@ -40,11 +40,8 @@ text:
     이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 펜듈럼 몬스터 1장을 고르고, 엑스트라 덱에 앞면 표시로 넣는다. ②: 1턴에 1번, 이 카드 이외의 자신 필드의 앞면 표시의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. 그 후, 자신의 엑스트라 덱에서 앞면 표시의 펜듈럼 몬스터 1장을 패에 넣는다. ③: 자신의 펜듈럼 존의 카드가 필드에서 벗어났을 경우에 발동한다. 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
-    灵摆怪兽2只
-    这个卡名的③的效果1回合只能使用1次。
-    ①：这张卡连接召唤成功的场合才能发动。从卡组选1只灵摆怪兽表侧表示加入自己的额外卡组。
-    ②：1回合1次，以这张卡以外的自己场上1张表侧表示的卡为对象才能发动。那张卡破坏。那之后，从自己的额外卡组把1只表侧表示的灵摆怪兽加入手卡。
-    ③：自己的灵摆区域的卡从场上离开的场合发动。自己从卡组抽1张。
+    灵摆怪兽２只
+    此卡名的③效果１回合仅可使用１次。①：此卡连接召唤成功的情况下可以发动。从牌组挑选１只灵摆怪兽，以表侧表示加入额外牌组。②：１回合１次，以此卡以外的自己场上的１张表侧表示的卡为对象可以发动。将该卡破坏。然后，从自己的额外牌组将１只表侧表示的灵摆怪兽加入手牌。③：自己灵摆区域的卡离开场上的情况下发动。自己从牌组抽１张。
 card_type: Monster
 monster_type_line: Psychic / Link / Effect
 attribute: FIRE
@@ -132,6 +129,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBTM-SC040
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Forbidden
   ocg: Limited
