--- a/data/rush/yugipedia921254.yaml
+++ b/data/rush/yugipedia921254.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    Cannot be Special Summoned.
+    This card cannot be Special Summoned.
   de:
   es:
   fr:
