--- a/data/cards/02752099.yaml
+++ b/data/cards/02752099.yaml
@@ -1,5 +1,5 @@
 konami_id: 18434
-password:
+password: 2752099
 name:
   en: Rose Shaman
   de:
@@ -36,7 +36,7 @@ series:
 - Rose
 images:
 - index: 1
-  image: RoseShaman-23PP-JP-OP.png
+  image: RoseShaman-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP009
