--- a/data/cards/03574681.yaml
+++ b/data/cards/03574681.yaml
@@ -1,5 +1,5 @@
 konami_id: 18431
-password:
+password: 3574681
 name:
   en: Golden Rule
   de:
@@ -33,7 +33,7 @@ series:
 - Crystal
 images:
 - index: 1
-  image: GoldenRule-23PP-JP-OP.png
+  image: GoldenRule-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP004
