--- a/data/cards/22790910.yaml
+++ b/data/cards/22790910.yaml
@@ -1,5 +1,5 @@
 konami_id: 18444
-password:
+password: 22790910
 name:
   en: Wisdom Magus - Himmel
   de:
@@ -37,7 +37,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: WisdomMagusHimmel-23PP-JP-OP.png
+  image: WisdomMagusHimmel-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP019
