--- a/data/cards/23812568.yaml
+++ b/data/cards/23812568.yaml
@@ -1,5 +1,5 @@
 konami_id: 18441
-password:
+password: 23812568
 name:
   en: Additional Mirror Level 7
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: AdditionalMirrorLevel7-23PP-JP-OP.png
+  image: AdditionalMirrorLevel7-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP016
