--- a/data/cards/31600513.yaml
+++ b/data/cards/31600513.yaml
@@ -1,5 +1,5 @@
 konami_id: 6461
-password:
+password: 31600513
 name:
   en: Praying Mantis
   de:
@@ -34,7 +34,7 @@ atk: 1500
 def: 1200
 images:
 - index: 1
-  image: PrayingMantis-23PP-JP-OP.png
+  image: PrayingMantis-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP002
