--- a/data/cards/32549749.yaml
+++ b/data/cards/32549749.yaml
@@ -1,5 +1,5 @@
 konami_id: 6455
-password:
+password: 32549749
 name:
   en: Arms Regeneration
   de:
@@ -35,7 +35,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: ArmsRegeneration-23PP-JP-OP.png
+  image: ArmsRegeneration-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP001
