--- a/data/cards/35756798.yaml
+++ b/data/cards/35756798.yaml
@@ -1,5 +1,5 @@
 konami_id: 18435
-password:
+password: 35756798
 name:
   en: Final Cross
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: FinalCross-23PP-JP-OP.png
+  image: FinalCross-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP010
