--- a/data/cards/39973386.yaml
+++ b/data/cards/39973386.yaml
@@ -1,5 +1,5 @@
 konami_id: 18432
-password:
+password: 39973386
 name:
   en: Duality
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: Duality-23PP-JP-OP.png
+  image: Duality-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP005
