--- a/data/cards/60023855.yaml
+++ b/data/cards/60023855.yaml
@@ -1,5 +1,5 @@
 konami_id: 18439
-password:
+password: 60023855
 name:
   en: Baby Spider
   de:
@@ -36,7 +36,7 @@ series:
 - Spider
 images:
 - index: 1
-  image: BabySpider-23PP-JP-OP.png
+  image: BabySpider-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP014
