--- a/data/cards/60306277.yaml
+++ b/data/cards/60306277.yaml
@@ -1,5 +1,5 @@
 konami_id: 18442
-password:
+password: 60306277
 name:
   en: Synchro Zone
   de:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Neither player can declare an attack with non-Synchro Monsters. You can only use each of the following effects of "Synchro Zone" once per turn. If a non-Tuner Synchro Monster(s) is sent to your GY: You can target 1 of them; Special Summon it, and if you do, it is treated as a Tuner. During your opponent's Main Phase: You can send this face-up card from your Spell & Trap Zone to the GY; immediately after this effect resolves, Synchro Summon 1 Synchro Monster using monsters you control as material.
+    Neither player can declare an attack with non-Synchro Monsters. You can only use each of the following effects of "Synchro Zone" once per turn. If a non-Tuner Synchro Monster(s) is sent to your GY (except during the Damage Step): You can target 1 of them; Special Summon it, and if you do, it is treated as a Tuner. During your opponent's Main Phase: You can send this face-up card from your Spell & Trap Zone to the GY; immediately after this effect resolves, Synchro Summon 1 Synchro Monster using monsters you control as material.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Synchro
 images:
 - index: 1
-  image: SynchroZone-23PP-JP-OP.png
+  image: SynchroZone-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP017
