--- a/data/cards/61245403.yaml
+++ b/data/cards/61245403.yaml
@@ -1,5 +1,5 @@
 konami_id: 18436
-password:
+password: 61245403
 name:
   en: Cattycorn
   de:
@@ -34,7 +34,7 @@ atk: 1500
 def: 500
 images:
 - index: 1
-  image: Cattycorn-23PP-JP-OP.png
+  image: Cattycorn-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP011
