--- a/data/cards/66367984.yaml
+++ b/data/cards/66367984.yaml
@@ -1,5 +1,5 @@
 konami_id: 18433
-password:
+password: 66367984
 name:
   en: Protection of the Elements
   de:
@@ -30,7 +30,7 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
-  image: ProtectionoftheElements-23PP-JP-OP.png
+  image: ProtectionoftheElements-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP007
