--- a/data/cards/97417863.yaml
+++ b/data/cards/97417863.yaml
@@ -1,5 +1,5 @@
 konami_id: 18440
-password:
+password: 97417863
 name:
   en: D/D/D/D Super-Dimensional Sovereign Emperor Zero Paradox
   de:
@@ -53,7 +53,7 @@ series:
 - D/D/D
 images:
 - index: 1
-  image: DDDDSuperDimensionalSovereignEmperorZeroParadox-23PP-JP-OP.png
+  image: DDDDSuperDimensionalSovereignEmperorZeroParadox-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP015
