--- a/data/cards/53754104.yaml
+++ b/data/cards/53754104.yaml
@@ -1,5 +1,5 @@
 konami_id: 6526
-password:
+password: 53754104
 name:
   en: Guard Mantis
   de:
@@ -34,7 +34,7 @@ atk: 1000
 def: 2400
 images:
 - index: 1
-  image: GuardMantis-23PP-JP-OP.png
+  image: GuardMantis-23PP-JP-C.png
 sets:
   ja:
   - set_number: 23PP-JP003
