--- a/data/cards/01259814.yaml
+++ b/data/cards/01259814.yaml
@@ -1,5 +1,5 @@
 konami_id: 18648
-password:
+password: 1259814
 name:
   en: Rainbowlution Lab
   de:
@@ -30,7 +30,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: RainbowlutionLab-JP-SAMPLE.png
+  image: RainbowlutionLab-23PR-JP-NPR.png
 sets:
   ja:
   - set_number: 23PR-JP005
