--- a/data/cards/26050548.yaml
+++ b/data/cards/26050548.yaml
@@ -1,5 +1,5 @@
 konami_id: 15465
-password:
+password: 26050548
 name:
   en: Extox Hydra
   de:
@@ -37,7 +37,7 @@ def: 2000
 materials: 2 or more monsters you control Special Summoned from the Extra Deck
 images:
 - index: 1
-  image: ExtoxHydra-JP-SAMPLE.png
+  image: ExtoxHydra-23PR-JP-NPR.png
 sets:
   ja:
   - set_number: 23PR-JP001
