--- a/data/cards/52445243.yaml
+++ b/data/cards/52445243.yaml
@@ -1,5 +1,5 @@
 konami_id: 15466
-password:
+password: 52445243
 name:
   en: Tri-Edge Master
   de:
@@ -45,7 +45,7 @@ def: 1800
 materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
-  image: TriEdgeMaster-JP-SAMPLE.png
+  image: TriEdgeMaster-23PR-JP-NPR.png
 sets:
   ja:
   - set_number: 23PR-JP002
