--- a/data/cards/65938950.yaml
+++ b/data/cards/65938950.yaml
@@ -1,5 +1,5 @@
 konami_id: 15468
-password:
+password: 65938950
 name:
   en: Yoko-Tuner-Tug-of-War
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: YokoTunerTugofWar-JP-SAMPLE.png
+  image: YokoTunerTugofWar-23PR-JP-NPR.png
 sets:
   ja:
   - set_number: 23PR-JP004
