--- a/data/rush/17495.yaml
+++ b/data/rush/17495.yaml
@@ -1,6 +1,6 @@
 konami_id: 17495
 name:
-  en: Century Ancient Wooden Sword
+  en: Centennial Wooden Blade
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 100
 def: 1500
 images:
 - index: 1
-  image: CenturyAncientWoodenSword-RDKP09-JP-C.png
+  image: CentennialWoodenBlade-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP009
