--- a/data/rush/16684.yaml
+++ b/data/rush/16684.yaml
@@ -1,6 +1,6 @@
 konami_id: 16684
 name:
-  en: Dogulce Langue de Chakoki
+  en: Dogulce Langue De Shakoki
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1700
 def: 0
 images:
 - index: 1
-  image: DogulceLanguedeChakoki-RDSD04-JP-C.png
+  image: DogulceLangueDeShakoki-RDSD04-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP027
