--- a/data/rush/16685.yaml
+++ b/data/rush/16685.yaml
@@ -1,6 +1,6 @@
 konami_id: 16685
 name:
-  en: Dokidoki Hexenhaus
+  en: Doki Doki Hexenhaus
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2300
 def: 2100
 images:
 - index: 1
-  image: DokidokiHexenhaus-RDSD04-JP-C.png
+  image: DokiDokiHexenhaus-RDSD04-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP028
