--- a/data/rush/16708.yaml
+++ b/data/rush/16708.yaml
@@ -1,6 +1,6 @@
 konami_id: 16708
 name:
-  en: Dried Fruit De-kako-ration
+  en: Dekorelic Dessert
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DriedFruitDekakoration-RDKP06-JP-C.png
+  image: DekorelicDessert-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP052
