--- a/data/rush/16959.yaml
+++ b/data/rush/16959.yaml
@@ -1,6 +1,6 @@
 konami_id: 16959
 name:
-  en: Honey Haniwaffle
+  en: Haniwaffle
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 800
 def: 200
 images:
 - index: 1
-  image: HoneyHaniwaffle-RDB003-JP-C.png
+  image: Haniwaffle-RDB003-JP-C.png
 sets:
   ja:
   - set_number: RD/B003-JP006
