--- a/data/rush/17493.yaml
+++ b/data/rush/17493.yaml
@@ -1,6 +1,6 @@
 konami_id: 17493
 name:
-  en: Year-Old Broom
+  en: One Year Broom
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 300
 def: 1300
 images:
 - index: 1
-  image: YearOldBroom-RDKP09-JP-C.png
+  image: OneYearBroom-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP007
