--- a/data/rush/17533.yaml
+++ b/data/rush/17533.yaml
@@ -1,6 +1,6 @@
 konami_id: 17533
 name:
-  en: Shuhari Sword
+  en: Defense Destroying Sword
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ShuhariSword-RDKP09-JP-C.png
+  image: DefenseDestroyingSword-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP047
