--- a/data/rush/17546.yaml
+++ b/data/rush/17546.yaml
@@ -1,6 +1,6 @@
 konami_id: 17546
 name:
-  en: Cross-Sword Deathmatch
+  en: Climax Clash
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: CrossSwordDeathmatch-RDSD02-JP-C.png
+  image: ClimaxClash-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP060
