--- a/data/rush/17547.yaml
+++ b/data/rush/17547.yaml
@@ -1,6 +1,6 @@
 konami_id: 17547
 name:
-  en: Greeting Strike!
+  en: Engage and Strike!
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: GreetingStrike-RDKP09-JP-R.png
+  image: EngageandStrike-RDKP09-JP-R.png
 sets:
   ja:
   - set_number: RD/KP09-JP061
