--- a/rush.yaml
+++ b/rush.yaml
@@ -36777,7 +36777,7 @@ yugipedia_page_id: 813600
 ---
 konami_id: 16684
 name:
-  en: Dogulce Langue de Chakoki
+  en: Dogulce Langue De Shakoki
   de:
   es:
   fr:
@@ -36825,7 +36825,7 @@ atk: 1700
 def: 0
 images:
 - index: 1
-  image: DogulceLanguedeChakoki-RDSD04-JP-C.png
+  image: DogulceLangueDeShakoki-RDSD04-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP027
@@ -36845,7 +36845,7 @@ yugipedia_page_id: 821970
 ---
 konami_id: 16685
 name:
-  en: Dokidoki Hexenhaus
+  en: Doki Doki Hexenhaus
   de:
   es:
   fr:
@@ -36893,7 +36893,7 @@ atk: 2300
 def: 2100
 images:
 - index: 1
-  image: DokidokiHexenhaus-RDSD04-JP-C.png
+  image: DokiDokiHexenhaus-RDSD04-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP028
@@ -38337,7 +38337,7 @@ yugipedia_page_id: 813643
 ---
 konami_id: 16708
 name:
-  en: Dried Fruit De-kako-ration
+  en: Dekorelic Dessert
   de:
   es:
   fr:
@@ -38381,7 +38381,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DriedFruitDekakoration-RDKP06-JP-C.png
+  image: DekorelicDessert-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP052
@@ -45782,7 +45782,7 @@ yugipedia_page_id: 832947
 ---
 konami_id: 16959
 name:
-  en: Honey Haniwaffle
+  en: Haniwaffle
   de:
   es:
   fr:
@@ -45816,7 +45816,7 @@ atk: 800
 def: 200
 images:
 - index: 1
-  image: HoneyHaniwaffle-RDB003-JP-C.png
+  image: Haniwaffle-RDB003-JP-C.png
 sets:
   ja:
   - set_number: RD/B003-JP006
@@ -57918,7 +57918,7 @@ yugipedia_page_id: 868669
 ---
 konami_id: 17493
 name:
-  en: Year-Old Broom
+  en: One Year Broom
   de:
   es:
   fr:
@@ -57952,7 +57952,7 @@ atk: 300
 def: 1300
 images:
 - index: 1
-  image: YearOldBroom-RDKP09-JP-C.png
+  image: OneYearBroom-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP007
@@ -57968,7 +57968,7 @@ yugipedia_page_id: 866624
 ---
 konami_id: 17494
 name:
-  en: Decade Mystic Sword
+  en: Decennium Mystic Sword
   de:
   es:
   fr:
@@ -58002,7 +58002,7 @@ atk: 200
 def: 1400
 images:
 - index: 1
-  image: DecadeMysticSword-RDKP09-JP-C.png
+  image: DecenniumMysticSword-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP008
@@ -58018,7 +58018,7 @@ yugipedia_page_id: 866626
 ---
 konami_id: 17495
 name:
-  en: Century Ancient Wooden Sword
+  en: Centennial Wooden Blade
   de:
   es:
   fr:
@@ -58052,7 +58052,7 @@ atk: 100
 def: 1500
 images:
 - index: 1
-  image: CenturyAncientWoodenSword-RDKP09-JP-C.png
+  image: CentennialWoodenBlade-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP009
@@ -60099,7 +60099,7 @@ atk: 2500
 def: 2500
 materials:
   en: |-
-    "Hero of the Yeast" + "Year-Old Broom"
+    "Hero of the Yeast" + "One Year Broom"
   de:
   es:
   fr:
@@ -60157,7 +60157,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up Normal Monster on your opponent's field. Then, if you destroyed a monster by this effect, you can add 1 "Cross-Sword Deathmatch" or "Greeting Strike!" from your Graveyard to your hand.
+    Destroy 1 face-up Normal Monster on your opponent's field. Then, if you destroyed a monster by this effect, you can add 1 "Climax Clash" or "Engage and Strike!" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -60177,7 +60177,7 @@ atk: 2500
 def: 2500
 materials:
   en: |-
-    "Masaki the Legendary Samurai" + "Century Ancient Wooden Sword"
+    "Masaki the Legendary Samurai" + "Centennial Wooden Blade"
   de:
   es:
   fr:
@@ -60535,7 +60535,7 @@ yugipedia_page_id: 861931
 ---
 konami_id: 17533
 name:
-  en: Shuhari Sword
+  en: Defense Destroying Sword
   de:
   es:
   fr:
@@ -60579,7 +60579,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ShuhariSword-RDKP09-JP-C.png
+  image: DefenseDestroyingSword-RDKP09-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP047
@@ -61323,7 +61323,7 @@ yugipedia_page_id: 865888
 ---
 konami_id: 17546
 name:
-  en: Cross-Sword Deathmatch
+  en: Climax Clash
   de:
   es:
   fr:
@@ -61367,7 +61367,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: CrossSwordDeathmatch-RDSD02-JP-C.png
+  image: ClimaxClash-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP060
@@ -61387,7 +61387,7 @@ yugipedia_page_id: 866616
 ---
 konami_id: 17547
 name:
-  en: Greeting Strike!
+  en: Engage and Strike!
   de:
   es:
   fr:
@@ -61431,7 +61431,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: GreetingStrike-RDKP09-JP-R.png
+  image: EngageandStrike-RDKP09-JP-R.png
 sets:
   ja:
   - set_number: RD/KP09-JP061
