--- a/data/cards/yugipedia916166.yaml
+++ b/data/cards/yugipedia916166.yaml
@@ -29,7 +29,7 @@ text:
 card_type: Monster
 monster_type_line: Machine / Pendulum / Tuner / Effect
 attribute: DARK
-rank: 4
+level: 4
 atk: 1000
 def: 1500
 pendulum_scale: 8
