--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -305,6 +305,15 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystals'
     rarities:
     - Common
+  - set_number: RC04-JP009
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: MACR-KR036
     set_name: Maximum Crisis
