--- a/data/cards/14772491.yaml
+++ b/data/cards/14772491.yaml
@@ -8,7 +8,7 @@ name:
   it: Anima Comune
   pt: Alma Comum
   ja: <ruby>魂<rt>たましい</rt></ruby>の<ruby>共<rt>きょう</rt></ruby><ruby>有<rt>ゆう</rt></ruby>－コモンソウル
-  ja_romaji: Tamashii no Kyōyū - Komon Sōru
+  ja_romaji: Tamashī no Kyōyū - Komon Sōru
   ko: 영혼의 공유-커먼 소울
   ko_rr:
   zh-TW:
