--- a/data/cards/27204311.yaml
+++ b/data/cards/27204311.yaml
@@ -159,6 +159,15 @@ sets:
     set_name: 'Structure Deck R: Lost Sanctuary'
     rarities:
     - Normal Parallel Rare
+  - set_number: RC04-JP016
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EP19-KR067
     set_name: Extra Pack 2019
