--- a/data/cards/03056267.yaml
+++ b/data/cards/03056267.yaml
@@ -42,10 +42,10 @@ def: 1700
 images:
 - index: 1
   image: '  InvaderoftheThrone-BE01-JP-C.png'
-  illustration: '  InvaderoftheThrone-TF04-JP-VG.jpg'
+  illustration: '  InvaderoftheThrone-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: InvaderoftheThrone-DB1-EN-C-UE.jpg
-  illustration: InvaderoftheThrone-TF04-EN-VG.jpg
+  illustration: InvaderoftheThrone-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN013
