--- a/data/cards/07841921.yaml
+++ b/data/cards/07841921.yaml
@@ -12,7 +12,7 @@ name:
   ko: 질주의 암흑 기사 가이아
   ko_rr: Jilju-ui Amheuk Gisa Gaia
   zh-TW:
-  zh-CN: 疾走的暗黑骑士 盖亚
+  zh-CN: 疾走暗黑骑士盖亚
 text:
   en: |-
     You can Normal Summon this card without Tributing. If this card is Normal Summoned without Tributing, its original ATK becomes 1900. If this card is Tributed: You can add 1 "Black Luster Soldier" monster from your Deck to your hand. You can only use this effect of "Charging Gaia the Fierce Knight" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 릴리스 없이 일반 소환할 수 있다. ②: 릴리스 없이 일반 소환한 이 카드의 원래 공격력은 1900 이 된다. ③: 이 카드가 릴리스되었을 경우에 발동할 수 있다. 덱에서 "카오스 솔저" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「疾走的暗黑骑士 盖亚」的③的效果1回合只能使用1次。①：这张卡可以不用解放作召唤。②：不用解放作召唤的这张卡的原本攻击力变成1900。③：这张卡被解放的场合才能发动。从卡组把1只「混沌战士」怪兽加入手卡。
+    此卡名的③效果1回合仅可使用1次。①：此卡无需解放即可召唤。②：不解放直接召唤的此卡原本的攻击力变为1900。③：此卡被解放的情况下可以发动。从牌组将1只"混沌士兵"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
@@ -150,6 +150,11 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL03-SC002
+    set_name: Classic Pack 03
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
