--- a/data/cards/32600024.yaml
+++ b/data/cards/32600024.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 "Dragonmaid" Spell/Trap from your Deck to your hand. At the start of the Battle Phase: You can return this card to the hand, and if you do, Special Summon 1 Level 7 or higher "Dragonmaid" monster from your hand or GY. You can only use each effect of "Chamber Dragonmaid" once per turn.
   de: |-
-    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 Magia/Trappola "Dragonzella" dal tuo Deck alla tua mano. All'inizio della Battle Phase: puoi far ritornare questa carta nella mano e, se lo fai, Evoca Specialmente 1 mostro "Dragonzella" di Livello 7 o superiore dalla tua mano o Cimitero. Puoi utilizzare ogni effetto di "Dragonzella Camera" una sola volta per turno.
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Drachenmädchen“-Zauber/Falle von deinem Deck hinzufügen. Am Beginn der Battle Phase: Du kannst diese Karte auf die Hand zurückgeben und falls du dies tust, beschwöre 1 „Drachenmädchen“-Monster der Stufe 7 oder höher als Spezialbeschwörung von deiner Hand oder deinem Friedhof. Du kannst jeden Effekt von „Kammer-Drachenmädchen“ nur einmal pro Spielzug verwenden.
   es: |-
     Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 Mágica/Trampa "Dragoncella" en tu Deck. Al comienzo de la Battle Phase: puedes devolver esta carta a la mano y, si lo haces, Invocar de Modo Especial, desde tu mano o Cementerio, 1 monstruo "Dragoncella" de Nivel 7 o mayor. Sólo puedes usar cada efecto de "Dragoncella Mucama" una vez por turno.
   fr: |-
