--- a/data/cards/53265336.yaml
+++ b/data/cards/53265336.yaml
@@ -72,7 +72,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  SolfachordScale-DBAG-JP-C.png   '
+  illustration: SolfachordScale-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SolfachordScale-ANGU-EN-R-1E.png
+  illustration: SolfachordScale-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN023
