--- a/data/cards/91598270.yaml
+++ b/data/cards/91598270.yaml
@@ -64,7 +64,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  SolSolfachordGracia-DBAG-JP-SR.png   '
+  illustration: SolSolfachordGracia-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SolSolfachordGracia-ANGU-EN-SR-1E.png
+  illustration: SolSolfachordGracia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN018
