--- a/data/cards/92043888.yaml
+++ b/data/cards/92043888.yaml
@@ -69,7 +69,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: 'SolfachordFormal-DBAG-JP-C.png     '
+  illustration: SolfachordFormal-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SolfachordFormal-ANGU-EN-R-1E.png
+  illustration: SolfachordFormal-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN026
