--- a/data/cards/92610868.yaml
+++ b/data/cards/92610868.yaml
@@ -64,7 +64,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  ReSolfachordDreamia-DBAG-JP-C.png   '
+  illustration: ReSolfachordDreamia-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ReSolfachordDreamia-ANGU-EN-R-1E.png
+  illustration: ReSolfachordDreamia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN015
