--- a/data/cards/27870337.yaml
+++ b/data/cards/27870337.yaml
@@ -66,7 +66,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  SolfachordElegance-DBAG-JP-SR.png   '
+  illustration: SolfachordElegance-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SolfachordElegance-ANGU-EN-SR-1E.png
+  illustration: SolfachordElegance-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN022
