--- a/data/cards/43352213.yaml
+++ b/data/cards/43352213.yaml
@@ -41,10 +41,10 @@ def: 2000
 images:
 - index: 1
   image: '  Nekogal2-V6-JP-C.jpg'
-  illustration: '    Nekogal2-TF04-JP-VG.jpg'
+  illustration: '    Nekogal2-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Nekogal2-TP7-EN-C-UE.jpg
-  illustration: Nekogal2-TF04-EN-VG.jpg
+  illustration: Nekogal2-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TP7-EN020
