--- a/data/cards/54387923.yaml
+++ b/data/cards/54387923.yaml
@@ -64,7 +64,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  TiSolfachordBeautia-DBAG-JP-C.png    '
+  illustration: TiSolfachordBeautia-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TiSolfachordBeautia-ANGU-EN-UR-1E.png
+  illustration: TiSolfachordBeautia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ANGU-EN020
