--- a/data/cards/59123194.yaml
+++ b/data/cards/59123194.yaml
@@ -12,7 +12,7 @@ name:
   ko: 엔라이트멘트 파라딘
   ko_rr:
   zh-TW:
-  zh-CN: 觉醒之魔导剑士
+  zh-CN: 觉醒的魔导剑士
 text:
   en: |-
     1 Tuner + 1 or more non-Tuner monsters
@@ -40,8 +40,8 @@ text:
     "엔라이트멘트 파라딘"의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: "마술사" 펜듈럼 몬스터를 소재로 하고 이 카드가 싱크로 소환에 성공했을 경우, 자신 묘지의 마법 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 패에 넣는다. ②: 이 카드가 전투로 상대 몬스터를 파괴했을 때에 발동할 수 있다. 그 몬스터의 원래의 공격력 만큼의 데미지를 상대에게 준다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    「觉醒之魔导剑士」的①的效果1回合只能使用1次。①：「魔术师」灵摆怪兽作为素材让这张卡同调召唤成功的场合，以自己墓地1张魔法卡为对象才能发动。那张卡加入手卡。②：这张卡战斗破坏对方怪兽时才能发动。给与对方那只怪兽的原本攻击力数值的伤害。
+    协调＋1只以上协调以外的怪兽
+    此卡名的①效果1回合仅可使用1次。①：此卡以"魔术师"灵摆怪兽为素材同步召唤成功的情况下，以自己墓地的1张魔法卡为对象可以发动。将该卡加入手牌。②：此卡战斗破坏对手怪兽时可以发动。给予对手该怪兽的原本攻击力数值的伤害。
 card_type: Monster
 monster_type_line: Spellcaster / Synchro / Effect
 attribute: DARK
@@ -122,6 +122,11 @@ sets:
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Common
+  zh-CN:
+  - set_number: SD29-SCP10
+    set_name: 'Structure Deck: Master of Pendulum Deck Enhancement Pack'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
