--- a/data/cards/75376965.yaml
+++ b/data/cards/75376965.yaml
@@ -42,10 +42,10 @@ def: 900
 images:
 - index: 1
   image: '  EnchantingMermaid-TP15-JP-C.jpg'
-  illustration: '    EnchantingMermaid-TF04-JP-VG.jpg'
+  illustration: '    EnchantingMermaid-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: EnchantingMermaid-OP03-EN-SP-UE.png
-  illustration: EnchantingMermaid-TF04-EN-VG.jpg
+  illustration: EEnchantingMermaid-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOB-EN084
