--- a/data/cards/79629370.yaml
+++ b/data/cards/79629370.yaml
@@ -38,10 +38,10 @@ def: 1300
 images:
 - index: 1
   image: '  MaidenoftheMoonlight-DL4-JP-C.jpg'
-  illustration: '   MaidenoftheMoonlight-TF04-JP-VG.jpg'
+  illustration: '   MaidenoftheMoonlight-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: MaidenoftheMoonlight-TP2-NA-C-UE.jpg
-  illustration: MaidenoftheMoonlight-TF04-EN-VG.jpg
+  illustration: MaidenoftheMoonlight-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TP2-023
