--- a/data/cards/80776622.yaml
+++ b/data/cards/80776622.yaml
@@ -64,7 +64,11 @@ series:
 - Solfachord
 images:
 - index: 1
+  image: '  DoSolfachordCoolia-DBAG-JP-UR.png   '
+  illustration: DoSolfachordCoolia-OW.png
+- index: '1.1'
   image: DoSolfachordCoolia-ANGU-EN-UR-1E.png
+  illustration: DoSolfachordCoolia-OW-2.png
 sets:
   en:
   - set_number: ANGU-EN021
