--- a/data/cards/yugipedia921232.yaml
+++ b/data/cards/yugipedia921232.yaml
@@ -32,7 +32,7 @@ attribute: LIGHT
 rank: 4
 atk: 2500
 def: 1650
-materials: 2+ Level 4 monsters
+materials: 2 or more Level 4 monsters
 series:
 - Constellar
 - tellarknight
