--- a/data/rush/16987.yaml
+++ b/data/rush/16987.yaml
@@ -1,6 +1,6 @@
 konami_id: 16987
 name:
-  en: Karuiruka
+  en: Light Dolphin
   de:
   es:
   fr:
@@ -50,7 +50,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: Karuiruka-RDKP07-JP-C.png
+  image: LightDolphin-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP021
