--- a/data/rush/17019.yaml
+++ b/data/rush/17019.yaml
@@ -1,6 +1,6 @@
 konami_id: 17019
 name:
-  en: Creek
+  en: Stream
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: Creek-RDKP07-JP-C.png
+  image: Stream-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP054
