--- a/data/rush/17023.yaml
+++ b/data/rush/17023.yaml
@@ -1,6 +1,6 @@
 konami_id: 17023
 name:
-  en: Iruqua's Raging Waves
+  en: Seastorm of Iruqua
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: IruquasRagingWaves-RDKP07-JP-C.png
+  image: SeastormofIruqua-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP059
