--- a/data/rush/17024.yaml
+++ b/data/rush/17024.yaml
@@ -1,6 +1,6 @@
 konami_id: 17024
 name:
-  en: Dolphin Counter
+  en: Dolphin Counterattack
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: DolphinCounter-RDKP07-JP-C.png
+  image: DolphinCounterattack-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP058
