--- a/rush.yaml
+++ b/rush.yaml
@@ -47283,7 +47283,7 @@ yugipedia_page_id: 829432
 ---
 konami_id: 16987
 name:
-  en: Karuiruka
+  en: Light Dolphin
   de:
   es:
   fr:
@@ -47333,7 +47333,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: Karuiruka-RDKP07-JP-C.png
+  image: LightDolphin-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP021
@@ -49472,7 +49472,7 @@ yugipedia_page_id: 835401
 ---
 konami_id: 17019
 name:
-  en: Creek
+  en: Stream
   de:
   es:
   fr:
@@ -49516,7 +49516,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: Creek-RDKP07-JP-C.png
+  image: Stream-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP054
@@ -49712,7 +49712,7 @@ yugipedia_page_id: 834958
 ---
 konami_id: 17023
 name:
-  en: Iruqua's Raging Waves
+  en: Seastorm of Iruqua
   de:
   es:
   fr:
@@ -49758,7 +49758,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: IruquasRagingWaves-RDKP07-JP-C.png
+  image: SeastormofIruqua-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP059
@@ -49774,7 +49774,7 @@ yugipedia_page_id: 832902
 ---
 konami_id: 17024
 name:
-  en: Dolphin Counter
+  en: Dolphin Counterattack
   de:
   es:
   fr:
@@ -49820,7 +49820,7 @@ series:
 - Dolphin
 images:
 - index: 1
-  image: DolphinCounter-RDKP07-JP-C.png
+  image: DolphinCounterattack-RDKP07-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP058
