--- a/data/rush/16719.yaml
+++ b/data/rush/16719.yaml
@@ -43,7 +43,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
   image: BattleDemotion-RDSD02-JP-C.png
