--- a/data/cards/33245030.yaml
+++ b/data/cards/33245030.yaml
@@ -12,7 +12,7 @@ name:
   ko: 크리 보르
   ko_rr:
   zh-TW:
-  zh-CN: 球形栗子球
+  zh-CN: 库里波球
 text:
   en: |-
     When an opponent's monster declares an attack: You can send this card from your hand to the GY; change the attacking monster to Defense Position. When you Ritual Summon, you can banish this card from your GY as 1 of the monsters required for the Ritual Summon.
@@ -32,7 +32,7 @@ text:
     ①: 상대 몬스터의 공격 선언시, 이 카드를 패에서 묘지로 보내고 발동할 수 있다. 그 공격 몬스터를 수비 표시로 한다. ②: 의식 소환을 실행할 경우, 필요한 레벨만큼의 몬스터 중에서 1장으로서, 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：对方怪兽的攻击宣言时，把这张卡从手卡送去墓地才能发动。那只攻击怪兽变成守备表示。②：仪式召唤进行的场合，可以作为需要的等级数值的怪兽之内的1只，把墓地的这张卡除外。
+    ①：对手怪兽的攻击宣言时，从手牌将此卡送至墓地可以发动。将该攻击怪兽改成守备表示。②：进行仪式召唤的情况下，可将墓地的此卡除外来作为所需等级数值的怪兽中的1只。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
@@ -223,6 +223,11 @@ sets:
     - Rare
   - set_number: DP18-KR043
     set_name: 'Duelist Pack: Legend Duelist'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL03-SC003
+    set_name: Classic Pack 03
     rarities:
     - Common
 limit_regulation:
