--- a/data/rush/16658.yaml
+++ b/data/rush/16658.yaml
@@ -1,6 +1,6 @@
 konami_id: 16658
 name:
-  en: Checkrael the Sun Angel, Yo
+  en: Sunny Fairy Spinangel
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: CheckraeltheSunAngelYo-RDKP06-JP-R.png
+  image: SunnyFairySpinangel-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP001
