--- a/data/rush/16659.yaml
+++ b/data/rush/16659.yaml
@@ -1,6 +1,6 @@
 konami_id: 16659
 name:
-  en: Shining Employee Brand New
+  en: Worker Warrior - New Recruit
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 4
 atk: 1400
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningEmployeeBrandNew-RDGRD2-JP-C.png
+  image: WorkerWarriorNewRecruit-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP002
