--- a/data/rush/16660.yaml
+++ b/data/rush/16660.yaml
@@ -1,6 +1,6 @@
 konami_id: 16660
 name:
-  en: Corporate Soldier Shine Black
+  en: Worker Warrior - Bad Boss
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ level: 5
 atk: 1700
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: CorporateSoldierShineBlack-RDKP06-JP-C.png
+  image: WorkerWarriorBadBoss-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP003
