--- a/data/rush/16680.yaml
+++ b/data/rush/16680.yaml
@@ -1,6 +1,6 @@
 konami_id: 16680
 name:
-  en: Shining SP Corporate Guard
+  en: Worker Warrior - Syndicate Security
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ level: 5
 atk: 1000
 def: 1800
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningSPCorporateGuard-RDKP06-JP-C.png
+  image: WorkerWarriorSyndicateSecurity-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP023
