--- a/data/rush/16681.yaml
+++ b/data/rush/16681.yaml
@@ -1,6 +1,6 @@
 konami_id: 16681
 name:
-  en: Shining Black Corporate King Arktalk the Corrupt
+  en: Worker Warrior - Sinister CEO
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ level: 7
 atk: 2400
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningBlackCorporateKingArktalktheCorrupt-RDSD02-JP-C.png
+  image: WorkerWarriorSinisterCEO-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP024
