--- a/data/rush/16922.yaml
+++ b/data/rush/16922.yaml
@@ -1,6 +1,6 @@
 konami_id: 16922
 name:
-  en: Shining Black Corporate King Great Arktalk the Corrupt
+  en: Worker Warrior - Sinister Chairman
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2800
 def: 2400
 materials:
   en: |-
-    "Shining Black Corporate King Arktalk the Corrupt" + "Remodeled Corporate Soldier Shine Organizer"
+    "Worker Warrior - Sinister CEO" + "Worker Warrior - Overhauled Organizer"
   de:
   es:
   fr:
@@ -61,10 +61,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningBlackCorporateKingGreatArktalktheCorrupt-RDEXT1-JP-UR.png
+  image: WorkerWarriorSinisterChairman-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP038
