--- a/data/rush/16923.yaml
+++ b/data/rush/16923.yaml
@@ -1,6 +1,6 @@
 konami_id: 16923
 name:
-  en: Remodeled Corporate Soldier Shine Organizer
+  en: Worker Warrior - Overhauled Organizer
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Shining Black Corporate King Arktalk the Corrupt" from your hand face-up to your field. This turn, you can only attack with Machine Type monsters.
+    Special Summon 1 "Worker Warrior - Sinister CEO" from your hand face-up to your field. This turn, you can only attack with Machine Type monsters.
   de:
   es:
   fr:
@@ -47,10 +47,10 @@ level: 4
 atk: 600
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: RemodeledCorporateSoldierShineOrganizer-RDEXT1-JP-C.png
+  image: WorkerWarriorOverhauledOrganizer-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP039
