--- a/rush.yaml
+++ b/rush.yaml
@@ -35210,7 +35210,7 @@ yugipedia_page_id: 816158
 ---
 konami_id: 16658
 name:
-  en: Checkrael the Sun Angel, Yo
+  en: Sunny Fairy Spinangel
   de:
   es:
   fr:
@@ -35244,7 +35244,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: CheckraeltheSunAngelYo-RDKP06-JP-R.png
+  image: SunnyFairySpinangel-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP001
@@ -35264,7 +35264,7 @@ yugipedia_page_id: 812927
 ---
 konami_id: 16659
 name:
-  en: Shining Employee Brand New
+  en: Worker Warrior - New Recruit
   de:
   es:
   fr:
@@ -35297,10 +35297,10 @@ level: 4
 atk: 1400
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningEmployeeBrandNew-RDGRD2-JP-C.png
+  image: WorkerWarriorNewRecruit-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP002
@@ -35324,7 +35324,7 @@ yugipedia_page_id: 821922
 ---
 konami_id: 16660
 name:
-  en: Corporate Soldier Shine Black
+  en: Worker Warrior - Bad Boss
   de:
   es:
   fr:
@@ -35357,10 +35357,10 @@ level: 5
 atk: 1700
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: CorporateSoldierShineBlack-RDKP06-JP-C.png
+  image: WorkerWarriorBadBoss-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP003
@@ -36503,7 +36503,7 @@ yugipedia_page_id: 816159
 ---
 konami_id: 16680
 name:
-  en: Shining SP Corporate Guard
+  en: Worker Warrior - Syndicate Security
   de:
   es:
   fr:
@@ -36550,10 +36550,10 @@ level: 5
 atk: 1000
 def: 1800
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningSPCorporateGuard-RDKP06-JP-C.png
+  image: WorkerWarriorSyndicateSecurity-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP023
@@ -36569,7 +36569,7 @@ yugipedia_page_id: 821919
 ---
 konami_id: 16681
 name:
-  en: Shining Black Corporate King Arktalk the Corrupt
+  en: Worker Warrior - Sinister CEO
   de:
   es:
   fr:
@@ -36616,10 +36616,10 @@ level: 7
 atk: 2400
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningBlackCorporateKingArktalktheCorrupt-RDSD02-JP-C.png
+  image: WorkerWarriorSinisterCEO-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP024
@@ -37971,7 +37971,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have a face-up "Shining Black Corporate King Arktalk the Corrupt" on your field.
+    You have a face-up "Worker Warrior - Sinister CEO" on your field.
   de:
   es:
   fr:
@@ -38000,7 +38000,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
   image: DeadlyBusinessCardExchange-RDKP06-JP-R.png
@@ -39004,7 +39004,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
   image: AttackSalaryCut-RDSD02-JP-C.png
@@ -39070,7 +39070,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
   image: BattleDemotion-RDSD02-JP-C.png
@@ -44480,7 +44480,7 @@ yugipedia_page_id: 827753
 ---
 konami_id: 16922
 name:
-  en: Shining Black Corporate King Great Arktalk the Corrupt
+  en: Worker Warrior - Sinister Chairman
   de:
   es:
   fr:
@@ -44528,7 +44528,7 @@ atk: 2800
 def: 2400
 materials:
   en: |-
-    "Shining Black Corporate King Arktalk the Corrupt" + "Remodeled Corporate Soldier Shine Organizer"
+    "Worker Warrior - Sinister CEO" + "Worker Warrior - Overhauled Organizer"
   de:
   es:
   fr:
@@ -44541,10 +44541,10 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: ShiningBlackCorporateKingGreatArktalktheCorrupt-RDEXT1-JP-UR.png
+  image: WorkerWarriorSinisterChairman-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP038
@@ -44562,7 +44562,7 @@ yugipedia_page_id: 829215
 ---
 konami_id: 16923
 name:
-  en: Remodeled Corporate Soldier Shine Organizer
+  en: Worker Warrior - Overhauled Organizer
   de:
   es:
   fr:
@@ -44590,7 +44590,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Shining Black Corporate King Arktalk the Corrupt" from your hand face-up to your field. This turn, you can only attack with Machine Type monsters.
+    Special Summon 1 "Worker Warrior - Sinister CEO" from your hand face-up to your field. This turn, you can only attack with Machine Type monsters.
   de:
   es:
   fr:
@@ -44609,10 +44609,10 @@ level: 4
 atk: 600
 def: 600
 series:
-- Shining Employee
+- Worker Warrior
 images:
 - index: 1
-  image: RemodeledCorporateSoldierShineOrganizer-RDEXT1-JP-C.png
+  image: WorkerWarriorOverhauledOrganizer-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP039
