--- a/data/rush/16672.yaml
+++ b/data/rush/16672.yaml
@@ -1,6 +1,6 @@
 konami_id: 16672
 name:
-  en: Thunderbold the Lightningfire Deity
+  en: Thunderbold, the Blazing Thunder
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2300
 def: 1900
 images:
 - index: 1
-  image: ThunderboldtheLightningfireDeity-RDKP06-JP-UR.png
+  image: ThunderboldtheBlazingThunder-RDKP06-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP06-JP015
