--- a/data/rush/16701.yaml
+++ b/data/rush/16701.yaml
@@ -1,6 +1,6 @@
 konami_id: 16701
 name:
-  en: Follow Wing World
+  en: Following World
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up WIND Attribute Normal Monsters on the field gain 500 ATK.
+    While this card is face-up in the Field Zone, face-up WIND Attribute Normal Monsters on the field gain 500 ATK.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: FollowWingWorld-RDKP06-JP-SR.png
+  image: FollowingWorld-RDKP06-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP06-JP045
