--- a/data/rush/16977.yaml
+++ b/data/rush/16977.yaml
@@ -1,6 +1,6 @@
 konami_id: 16977
 name:
-  en: Necroman III
+  en: Necroman the Third
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1000
 def: 0
 images:
 - index: 1
-  image: NecromanIII-RDKP07-JP-SR.png
+  image: NecromantheThird-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP011
