--- a/data/rush/17291.yaml
+++ b/data/rush/17291.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Follow Wing World" from your Graveyard to your hand.
+    Add 1 "Following World" from your Graveyard to your hand.
   de:
   es:
   fr:
