--- a/rush.yaml
+++ b/rush.yaml
@@ -35970,7 +35970,7 @@ yugipedia_page_id: 813060
 ---
 konami_id: 16672
 name:
-  en: Thunderbold the Lightningfire Deity
+  en: Thunderbold, the Blazing Thunder
   de:
   es:
   fr:
@@ -36018,7 +36018,7 @@ atk: 2300
 def: 1900
 images:
 - index: 1
-  image: ThunderboldtheLightningfireDeity-RDKP06-JP-UR.png
+  image: ThunderboldtheBlazingThunder-RDKP06-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP06-JP015
@@ -37897,7 +37897,7 @@ yugipedia_page_id: 816162
 ---
 konami_id: 16701
 name:
-  en: Follow Wing World
+  en: Following World
   de:
   es:
   fr:
@@ -37925,7 +37925,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, all face-up WIND Attribute Normal Monsters on the field gain 500 ATK.
+    While this card is face-up in the Field Zone, face-up WIND Attribute Normal Monsters on the field gain 500 ATK.
   de:
   es:
   fr:
@@ -37941,7 +37941,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: FollowWingWorld-RDKP06-JP-SR.png
+  image: FollowingWorld-RDKP06-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP06-JP045
@@ -46621,7 +46621,7 @@ yugipedia_page_id: 835796
 ---
 konami_id: 16977
 name:
-  en: Necroman III
+  en: Necroman the Third
   de:
   es:
   fr:
@@ -46669,7 +46669,7 @@ atk: 1000
 def: 0
 images:
 - index: 1
-  image: NecromanIII-RDKP07-JP-SR.png
+  image: NecromantheThird-RDKP07-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP011
@@ -53695,7 +53695,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Follow Wing World" from your Graveyard to your hand.
+    Add 1 "Following World" from your Graveyard to your hand.
   de:
   es:
   fr:
