--- a/rush.yaml
+++ b/rush.yaml
@@ -58860,7 +58860,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Dolphin Counter" or "Iruqua's Raging Waves" from your Graveyard in your Spell & Trap Zone. Then, you can Special Summon 1 "Dolphin King Iruqua" from your hand or your Graveyard face-up to your field.
+    Set 1 "Dolphin Counterattack" or "Seastorm of Iruqua" from your Graveyard in your Spell & Trap Zone. Then, you can Special Summon 1 "Dolphin King Iruqua" from your hand or your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -84412,7 +84412,7 @@ atk: 2400
 def: 2000
 images:
 - index: 1
-  image: GarneciaElefantis-RD23PR-JP-OP.png
+  image: GarneciaElefantis-RD23PR-JP-NPR.png
 sets:
   ja:
   - set_number: RD/23PR-JP001
@@ -84539,7 +84539,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: Nikotamabot-RDORP1-JP-OP.png
+  image: Nikotamabot-RD23PR-JP-NPR.png
 sets:
   ja:
   - set_number: RD/23PR-JP003
