--- a/data/cards/52963531.yaml
+++ b/data/cards/52963531.yaml
@@ -32,7 +32,7 @@ text:
     "EM 스플래시맘모스" 의 몬스터 효과는 듀얼중에 1번밖에 사용할 수 없다. ① : 자신 메인 페이즈에 발동할 수 있다. 자신 필드에서, 드래곤족의 융합 몬스터 카드에 기재되어 있는 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「娱乐伙伴 洒水猛犸」的怪兽效果在决斗中只能使用1次。①：自己主要阶段才能发动。从自己场上把龙族的融合怪兽卡决定的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
+    此卡名的怪兽效果在决斗中仅可使用1次。①：在自己的主要阶段可以发动。从自己场上将由龙族融合怪兽卡决定的融合素材怪兽送至墓地，将该1只融合怪兽从额外牌组融合召唤。
 card_type: Monster
 monster_type_line: Beast / Pendulum / Effect
 attribute: WATER
@@ -59,7 +59,7 @@ pendulum_effect:
     ① : 1턴에 1번, 자신 필드에 융합 몬스터가 특수 소환되었을 때에 발동할 수 있다. 자신의 엑스트라 덱에서 앞면 표시의 "오드아이즈" 펜듈럼 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    1回合1次，自己场上有融合怪兽特殊召唤时才能发动。从自己的额外卡组把1只表侧表示的「异色眼」灵摆怪兽特殊召唤。
+    ①：1回合1次，融合怪兽被特殊召唤至自己场上时可以发动。从自己的额外牌组将1只表侧表示的"异色眼"灵摆怪兽特殊召唤。
 series:
 - Performapal
 images:
@@ -121,6 +121,11 @@ sets:
     set_name: Dimension of Chaos
     rarities:
     - Rare
+  zh-CN:
+  - set_number: SD29-SC018
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
